--- a/pj4.ipynb
+++ b/pj4.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "get_ipython().run_line_magic('matplotlib', 'inline')\n"
+    "get_ipython().run_line_magic('matplotlib', 'inline')"
    ]
   },
   {
@@ -734,7 +734,7 @@
     "languages = q1['HaveWorkedLanguage'].str.split('; ', expand=True).stack().value_counts()\n",
     "plt.figure(figsize=(10,10))\n",
     "languages.plot(kind=\"bar\")\n",
-    "plt.savefig('languages')\n"
+    "plt.savefig('languages')"
    ]
   },
   {
